--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,4 +19,4 @@ jobs:
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: quarto-pub
-          QUARTO_PUB_AUTH_TOKEN: ${{ secrets.qpa_X5hXmOJcKjqDGCG5IRCZAV3n6UhlqTxb1swzHkWoKxEPgylP6VEZgrP0qcMHtbzc }}
+          QUARTO_PUB_AUTH_TOKEN: ${{ secrets.QUARTO_PUB_AUTH_TOKEN }}
